--- a/src/templates/client.hbs
+++ b/src/templates/client.hbs
@@ -17,6 +17,9 @@ import { {{{httpRequest}}} } from './core/{{{httpRequest}}}';
 {{#if services}}
 {{#each services}}
 import { {{{name}}}{{{@root.postfix}}} } from './services/{{{name}}}{{{@root.postfix}}}';
+{{#unless @last}}
+
+{{/unless}}
 {{/each}}
 {{/if}}
 
